# ArduinoStreamUtils

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CHANGLOG.md  CMakeLists.txt  LICENSE.md  README.md  keywords.txt  library.properties
.github/: FUNDING.yml
.github/workflows/: ci.yml  lock.yml
examples/ChunkDecoding/: ChunkDecoding.ino
examples/EepromRead/: EepromRead.ino
examples/EepromWrite/: EepromWrite.ino
examples/Hamming/: Hamming.ino
examples/HammingSerial1/: HammingSerial1.ino
examples/HammingSoftwareSerial/: HammingSoftwareSerial.ino
examples/InputBuffer/: InputBuffer.ino
examples/Logger/: Logger.ino
examples/OutputBuffer/: OutputBuffer.ino
examples/OutputLogger/: OutputLogger.ino
examples/ProgmemStream/: ProgmemStream.ino
examples/ReadBuffer/: ReadBuffer.ino
examples/ReadLogger/: ReadLogger.ino
examples/StringPrint/: StringPrint.ino
examples/StringStream/: StringStream.ino
examples/WriteBuffer/: WriteBuffer.ino
examples/WriteLogger/: WriteLogger.ino
extras/ci/: cmake.sh  platformio.sh
extras/test/: BufferingPrintTest.cpp  CMakeLists.txt  ChunkDecodingClientTest.cpp  ChunkDecodingStreamTest.cpp  EepromStreamTest.cpp  FailingAllocator.hpp  HammingClientTest.cpp  HammingDecodingClientTest.cpp  HammingDecodingStreamTest.cpp  HammingEncodingClientTest.cpp  HammingEncodingStreamTest.cpp  HammingPrintTest.cpp  HammingStreamTest.cpp  LoggingClientTest.cpp  LoggingPrintTest.cpp  LoggingStreamTest.cpp  MemoryStreamTest.cpp  ProgmemStreamTest.cpp  ReadBufferingClientTest.cpp  ReadBufferingStreamTest.cpp  ReadLoggingClientTest.cpp  ReadLoggingStreamTest.cpp  ReadThrottlingStreamTest.cpp  SpyingAllocator.hpp  StringPrintTest.cpp  StringStreamTest.cpp  WaitingPrintTest.cpp  WriteBufferingClientTest.cpp  WriteBufferingStreamTest.cpp  WriteLoggingClientTest.cpp  WriteLoggingStreamTest.cpp  WriteWaitingClientTest.cpp  WriteWaitingStreamTest.cpp  main.cpp
extras/test/cores/avr/: Arduino.h  CMakeLists.txt  Client.h  EEPROM.cpp  Print.h  Stream.h  WString.h
extras/test/cores/avr/avr/: pgmspace.h
extras/test/cores/coreapi/: Arduino.h  Client.h  Common.h  Print.h  Stream.h  WString.h
extras/test/cores/dxcore/: CMakeLists.txt  EEPROM.cpp  EEPROM.h
extras/test/cores/esp32/: Arduino.h  CMakeLists.txt  Client.h  EEPROM.cpp  EEPROM.h  Print.h  Stream.h  WString.h
extras/test/cores/esp8266/: Arduino.h  CMakeLists.txt  Client.h  EEPROM.cpp  EEPROM.h  Print.h  Stream.h
extras/test/cores/mbed/: CMakeLists.txt
extras/test/cores/nrf52/: Arduino.h  CMakeLists.txt  Client.h  Print.h  Stream.h
extras/test/cores/rp2040/: CMakeLists.txt  EEPROM.cpp  EEPROM.h
extras/test/cores/samd/: CMakeLists.txt  Print.h  Stream.h  WString.h
extras/test/cores/stm32/: CMakeLists.txt  Client.h  EEPROM.cpp  EEPROM.h  Print.h  Stream.h  WString.h
extras/test/cores/stm32f1/: CMakeLists.txt  Client.h  Print.h  Stream.h
extras/test/cores/stm32f4/: CMakeLists.txt  Client.h  Print.h  Stream.h
extras/test/cores/teensy/: CMakeLists.txt  Client.h  EEPROM.h  Print.h  Stream.h  WString.h
extras/test/doctest/: CMakeLists.txt  main.cpp
scripts/travis/: platformio.sh
src/: StreamUtils.h  StreamUtils.hpp
src/StreamUtils/: Buffer.hpp  BufferedStream.hpp  CharArray.hpp  CircularBuffer.hpp  Configuration.hpp  DefaultAllocator.hpp  DefaultThrottler.hpp  Helpers.hpp  LinearBuffer.hpp  LoggingStream.hpp  MemoryStream.hpp  Polyfills.hpp  ReadBufferingPolicy.hpp  ReadBufferingStream.hpp  ReadLoggingPolicy.hpp  ReadLoggingStream.hpp  ReadThrottlingStream.hpp  StreamLogger.hpp  StreamOutputLogger.hpp  StreamWithInputBuffer.hpp  StreamWithOutputBuffer.hpp  WriteBufferingPolicy.hpp  WriteBufferingStream.hpp  WriteForwardingPolicy.hpp  WriteLoggingPolicy.hpp  WriteLoggingStream.hpp
src/StreamUtils/Buffers/: CharArray.hpp  CircularBuffer.hpp  LinearBuffer.hpp
src/StreamUtils/Clients/: ChunkDecodingClient.hpp  ClientProxy.hpp  HammingClient.hpp  HammingDecodingClient.hpp  HammingEncodingClient.hpp  LoggingClient.hpp  MemoryClient.hpp  ReadBufferingClient.hpp  ReadLoggingClient.hpp  SpyingClient.hpp  WriteBufferingClient.hpp  WriteLoggingClient.hpp  WriteWaitingClient.hpp
src/StreamUtils/Policies/: ChunkDecodingPolicy.hpp  ConnectForwardingPolicy.hpp  ConnectSpyingPolicy.hpp  HammingDecodingPolicy.hpp  HammingEncodingPolicy.hpp  ReadBufferingPolicy.hpp  ReadForwardingPolicy.hpp  ReadLoggingPolicy.hpp  ReadSpyingPolicy.hpp  ReadThrottlingPolicy.hpp  WriteBufferingPolicy.hpp  WriteForwardingPolicy.hpp  WriteLoggingPolicy.hpp  WriteSpyingPolicy.hpp  WriteWaitingPolicy.hpp
src/StreamUtils/Ports/: ArduinoThrottler.hpp  DefaultAllocator.hpp  DefaultThrottler.hpp
src/StreamUtils/Prints/: BufferingPrint.hpp  HammingPrint.hpp  LoggingPrint.hpp  PrintProxy.hpp  SpyingPrint.hpp  StringPrint.hpp  WaitingPrint.hpp
src/StreamUtils/Streams/: ChunkDecodingStream.hpp  EepromStream.hpp  HammingDecodingStream.hpp  HammingEncodingStream.hpp  HammingStream.hpp  LoggingStream.hpp  MemoryStream.hpp  ProgmemStream.hpp  ReadBufferingStream.hpp  ReadLoggingStream.hpp  ReadThrottlingStream.hpp  SpyingStream.hpp  StreamProxy.hpp  StreamSpy.hpp  StringStream.hpp  WriteBufferingStream.hpp  WriteLoggingStream.hpp  WriteWaitingStream.hpp
test/: BufferedStreamTest.cpp  BufferingPrintTest.cpp  CMakeLists.txt  FailingAllocator.hpp  LoggingClientTest.cpp  LoggingPrintTest.cpp  LoggingStreamTest.cpp  MemoryStreamTest.cpp  ReadBufferingClientTest.cpp  ReadBufferingStreamTest.cpp  ReadLoggingClientTest.cpp  ReadLoggingStreamTest.cpp  Stream.hpp  StreamOutputLoggerTest.cpp  StreamSpy.hpp  StreamStub.hpp  StreamWithInputBufferTest.cpp  StreamWithOutputBufferTest.cpp  WriteBufferingClientTest.cpp  WriteBufferingStreamTest.cpp  WriteLoggingClientTest.cpp  WriteLoggingStreamTest.cpp  main.cpp
test/cores/avr/: Client.h  Print.h  Stream.h
test/cores/esp8266/: Client.h  Print.h  Stream.h
test/cores/samd/: Client.h  Print.h  Stream.h
test/include/: Client.h  Print.h
